Configure environment, secure secrets, and modernize email service

--- a/static/index.html
+++ b/static/index.html
@@ -913,7 +913,7 @@
 <nav class="drawer">
     <div class="drawer-header">
         <div class="weatherford-logo">
-            <img src="/static/weatherford_logo.png" alt="Logo" style="height: 32px; width: auto;">
+            <img src="/static/phm_logo.jpeg" alt="PHM Logo" style="height: 32px; width: auto;">
         </div>
         <button class="drawer-close" onclick="toggleDrawer()">✕</button>
     </div>
@@ -1028,7 +1028,7 @@
         <!-- Hero Banner with Logo -->
         <div
             style="background: linear-gradient(135deg, #C41E3A 0%, #9A1830 100%); border-radius: 16px; padding: 24px; margin-bottom: 20px; text-align: center;">
-            <img src="/static/weatherford_logo.png" alt="Weatherford"
+            <img src="/static/phm_logo.jpeg" alt="PHM"
                 style="width: 180px; height: auto; margin-bottom: 12px;">
             <h1 data-i18n="welcome" style="font-size: 24px; font-weight: 700; margin-bottom: 4px;">Welcome!</h1>
             <p data-i18n="projectManagement" style="color: rgba(255,255,255,0.8); font-size: 14px;">CSMS Project
@@ -1998,7 +1998,7 @@
                     <!-- Assigned To Email -->
                     <div>
                         <input type="email" class="form-input" name="assigned_to_email"
-                            placeholder="Email (e.g. john@weatherford.com)" data-placeholder="emailPlaceholder"
+                    placeholder="Email (e.g. john@phm.co.id)" data-placeholder="emailPlaceholder"
                             required>
                         <p style="font-size: 11px; color: var(--text-muted); margin-top: 6px;"
                             data-i18n="emailNotification">
@@ -3037,7 +3037,7 @@
             // Schedule Form Fields
             selectAProject: 'Pilih proyek', mwtPlanDate: 'Tanggal Rencana MWT', hseCommitteeMeetingDate: 'Tanggal Rapat Komite HSE',
             csmsPbAuditDate: 'Tanggal Audit CSMS PB', hsePlanMeetingDate: 'Tanggal Rapat Rencana HSE', sprMeetingDate: 'Tanggal Rapat SPR',
-            hazidHazopMeetingDate: 'Tanggal Rapat HAZID/HAZOP', pic: 'PIC', namePlaceholder: 'Nama', emailPlaceholder: 'Email (contoh: john@weatherford.com)',
+            hazidHazopMeetingDate: 'Tanggal Rapat HAZID/HAZOP', pic: 'PIC', namePlaceholder: 'Nama', emailPlaceholder: 'Email (contoh: john@phm.co.id)',
             hseCommitteeMeetingSchedule: 'Jadwal Rapat Komite HSE', noSchedulesInPeriod: 'Tidak ada jadwal di periode terpilih', all: 'Semua',
             // Statistics
             statisticsTitle: 'Statistik', projectOverview: 'Ringkasan Proyek', taskOverview: 'Ringkasan Tugas', monthlyCharts: 'Grafik Bulanan',
@@ -3152,7 +3152,7 @@
             // Schedule Form Fields
             selectAProject: 'Select a project', mwtPlanDate: 'MWT Plan Date', hseCommitteeMeetingDate: 'HSE Committee Meeting Date',
             csmsPbAuditDate: 'CSMS PB Audit Date', hsePlanMeetingDate: 'HSE Plan Meeting Date', sprMeetingDate: 'SPR Meeting Date',
-            hazidHazopMeetingDate: 'HAZID/HAZOP Meeting Date', pic: 'PIC', namePlaceholder: 'Name', emailPlaceholder: 'Email (e.g. john@weatherford.com)',
+            hazidHazopMeetingDate: 'HAZID/HAZOP Meeting Date', pic: 'PIC', namePlaceholder: 'Name', emailPlaceholder: 'Email (e.g. john@phm.co.id)',
             hseCommitteeMeetingSchedule: 'HSE Committee Meeting Schedule', noSchedulesInPeriod: 'No schedules in selected period', all: 'All',
             // Statistics
             statisticsTitle: 'Statistics', projectOverview: 'Project Overview', taskOverview: 'Task Overview', monthlyCharts: 'Monthly Charts',
