--- a/static/privacy-policy.html
+++ b/static/privacy-policy.html
@@ -85,12 +85,12 @@
     <h2>Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us:</p>
     <ul>
-        <li>Email: support@weatherford.com</li>
-        <li>Company: Weatherford</li>
+        <li>Email: support@phm.co.id</li>
+        <li>Company: PHM</li>
     </ul>
 
     <p style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #333; color: #888;">
-        © 2024 CSMS App by Weatherford. All rights reserved.
+        © 2024 CSMS App by PHM. All rights reserved.
     </p>
 </body>
 
