--- a/static/website.html
+++ b/static/website.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSMS - Project Management System</title>
     <meta name="description"
-        content="CSMS Project Management System by Weatherford - Manage projects, tasks, and schedules efficiently.">
+        content="CSMS Project Management System by PHM - Manage projects, tasks, and schedules efficiently.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -200,10 +200,10 @@
         </section>
 
         <footer id="contact">
-            <p>© 2024 CSMS by Weatherford. All rights reserved.</p>
+            <p>© 2024 CSMS by PHM. All rights reserved.</p>
             <p style="margin-top: 10px;">
                 <a href="/static/privacy-policy.html">Privacy Policy</a> |
-                <a href="mailto:support@weatherford.com">Contact Support</a>
+                <a href="mailto:support@phm.co.id">Contact Support</a>
             </p>
         </footer>
     </div>
